# mlflow

./: README.rst  conftest.py  generate-protos.sh  observe_judge_execution_utils.py  pyproject.toml  run_judge.py  setup.py  test-requirements.txt
.github/workflows/: build-wheel.yml  cross-version-tests.yml  master.yml  pipeline-template.yml  preview-docs.yml  publish-jfrog-pypi.yml  read-jfrog-pypi.yml  sync-fork.yml  tracing.yaml
dev/: dev-env-setup.sh  install-common-deps.sh  install-skinny.sh  large-requirements.txt  run-dev-server.sh  run-python-skinny-tests.sh  small-requirements.txt  tracing-requirements.txt
docs/api_reference/: api_inventory.txt
docs/source/: models.rst
examples/flower_classifier/: image_pyfunc.py
examples/openai/: pyfunc.py
examples/sklearn_elasticnet_wine/: conda.yaml  train.py
examples/tracing/: tracing_smaller_client.py
examples/xgboost/: train.py
mcp/: .mcp.json  README.md  mlflow_client.py  pyproject.toml  test_full_mcp_flow.py  test_mcp_server.py  test_parameter_validation.py  test_schema_debug.py  test_search_traces.py  test_validation_debug.py  tools.py
mcp/mlflow_mcp_pkg/: __init__.py  __main__.py  mlflow_client.py  server.py  tools.py
mleap_notebook/: mlflow_mleap_deployment_notebook.html
mlflow/: __init__.py  _spark_autologging.py  cli.py  db.py  environment_variables.py  file_formats.py  flavor.py  funcmodel.py  keras.py  ml-package-versions.yml  pytorch.py  sklearn.py  spacy.py  spark.py  tensorflow.py  transformers.py  version.py  xgboost.py
mlflow/autolog/: __init__.py
mlflow/azureml/: __init__.py
mlflow/cli/: __init__.py  eval.py  issues.py  scorers.py  traces.py
requirements/: test-requirements.txt
tests/: conftest.py  helper_functions.py  test_cli.py  test_skinny.py
(+400 files in other folders)
