[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-mcp"
version = "0.1.0"
description = "MLflow MCP server for trace debugging"
readme = "README.md"
authors = [{ name = "MLflow Team", email = "mlflow@databricks.com" }]
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = ["mlflow", "mcp>=0.1.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
mlflow-mcp = "mlflow_mcp_pkg.__main__:main"

[project.urls]
Homepage = "https://mlflow.org"
Repository = "https://github.com/mlflow/mlflow"
Documentation = "https://mlflow.org/docs/latest/index.html"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlflow_mcp_pkg*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM"]
ignore = ["E501"]                                                      # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
